tidy up resolve() more